Major change to class based views and access control.

--- a/course/templates/course/_course_dropdown_menu.html
+++ b/course/templates/course/_course_dropdown_menu.html
@@ -1,8 +1,9 @@
 {% load i18n %}
+{% load course %}
 {% for ci in instances %}
 <li>
-	<a href="{% url 'course' course_url=ci.course.url instance_url=ci.url %}">
-    	{{ ci.course.code }} {{ ci.course.name }}
+	<a href="{{ ci|url }}">
+    	{{ ci.course }}
     </a>
 </li>
 {% endfor %}
