--- a/deviations/templates/deviations/teacher/list_dl.html
+++ b/deviations/templates/deviations/teacher/list_dl.html
@@ -1,9 +1,10 @@
 {% extends "course/course_base.html" %}
 {% load i18n %}
+{% load course %}
 
 {% block coursecontent %}
 
-<a class="btn btn-success" href="{% url 'deviations-add-dl' course_url=course.url instance_url=instance.url %}">
+<a class="btn btn-success" href="{{ instance|url:'deviations-add-dl' }}">
 	{% trans "Add new deadline rule deviations" %}
 </a>
 
@@ -22,7 +23,7 @@
     <td>{{ deviation.exercise }}</td>
     <td>{{ deviation.extra_minutes }}</td>
     <td>
-   	  <form method="post" action="{% url 'deviations-remove-dl' course_url=course.url instance_url=instance.url deviation_id=deviation.id %}">
+   	  <form method="post" action="{{ deviation|url:'deviations-remove-dl' }}">
    	    {% csrf_token %}
    	    <input type="submit" value="{% trans 'Remove' %}" class="btn btn-warning" />
    	  </form>
