--- a/exercise/templates/exercise/_exercise_info.html
+++ b/exercise/templates/exercise/_exercise_info.html
@@ -5,30 +5,30 @@
 <dl>
     <!--<dt>{% trans "Deadline" %}</dt>
     <dd>{{ exercise.course_module.closing_time }}</dd>
-    
+
     <dt>{% trans "Maximum points" %}</dt>
     <dd>{{ exercise.max_points }}</dd>
-    
+
     <dt>{% trans "Points to pass" %}</dt>
     <dd>{{ exercise.points_to_pass }}</dd>-->
-    
+
     <dt>{% trans "Submissions" %}</dt>
     <dd>
-    	{{ exercise_summary.get_submission_count }}
+    	{{ summary.get_submission_count }}
     	{% if exercise.max_submissions %}
     	/ {{ exercise|max_submissions:profile }}
     	{% endif %}
     </dd>
-    
+
     <!--<dt>{% trans "Maximum group size" %}</dt>
     <dd>{{ exercise.max_group_size }}</dd>-->
 </dl>
 
 <div class="well my-score-box">
-    <h2>{{ exercise_summary.get_points }} <small>/ {{ exercise.max_points }}</small></h2>
-    <div class="progress {% if exercise_summary.is_passed %}progress-success{% else %}progress-danger{% endif %} progress-striped" style="position:relative">
-        <div class="bar" rel="tooltip" style="width:{{ exercise_summary.get_completed_percentage }}%;"
-        	data-placement="below" title="{% trans 'Your points' %}: {{ exercise_summary.get_points }}">
+    <h2>{{ summary.get_points }} <small>/ {{ exercise.max_points }}</small></h2>
+    <div class="progress {% if summary.is_passed %}progress-success{% else %}progress-danger{% endif %} progress-striped" style="position:relative">
+        <div class="bar" rel="tooltip" style="width:{{ summary.get_completed_percentage }}%;"
+        	data-placement="below" title="{% trans 'Your points' %}: {{ summary.get_points }}">
         </div>
 
         <a class="score-barrier required-score" rel="tooltip" style="left:{{ exercise.get_percentage_to_pass }}%" href="#"
