--- a/exercise/templates/exercise/exercise_base.html
+++ b/exercise/templates/exercise/exercise_base.html
@@ -1,5 +1,6 @@
 {% extends "course/course_base.html" %}
 {% load i18n %}
+{% load course %}
 {% load apps %}
 
 {% block maintitle %}
@@ -15,28 +16,28 @@
 
 {% block content %}
 <div class="row">
-    
+
     <div class="span2">
         <ul class="nav nav-list">
             {% include "exercise/_exercise_menu.html" %}
         </ul>
     </div>
-    
+
     <div class="span10">
         <div>
             {% include "exercise/_exercise_tabs.html" %}
         </div>
         <div class="row">
-            
+
             <div id="exercise" class="span8">
                 {% block exercisecontent %}
                 {% endblock %}
                 &nbsp;{# This prevents the div being completely empty #}
             </div>
-            
+
             <div class="span2">
                 {% block exerciseinfo %}
-                <div id="exercise-info" data-url="{% url 'exercise' course_url=course.url instance_url=instance.url exercise_id=exercise.id %}">
+                <div id="exercise-info" data-url="{{ exercise|url:'exercise-info' }}">
                     {% include "exercise/_exercise_info.html" %}
                 </div>
                 {% endblock %}
