--- a/exercise/templates/exercise/staff/list_submissions.html
+++ b/exercise/templates/exercise/staff/list_submissions.html
@@ -1,5 +1,6 @@
 {% extends "course/course_base.html" %}
 {% load i18n %}
+{% load course %}
 
 {% block coursecontent %}
 
@@ -7,7 +8,7 @@
     <div class="span10">
         <ul class="breadcrumb">
             <li>
-                <a href="{% url 'course' course_url=course.url instance_url=instance.url %}">
+                <a href="{{ instance|url }}">
                 	{{ course.name }}
                 </a>
                 <span class="divider">/</span>
