--- a/exercise/templates/exercise/staff/results.html
+++ b/exercise/templates/exercise/staff/results.html
@@ -5,8 +5,7 @@
 <div class="row">
     <div class="span10">
         <h2>{% trans "Result summary" %}</h2>
-        
-        {{ table_html|safe }}
+        {% include 'exercise/staff/_results_table.html' with result_table=table %}
     </div>
 </div>
 {% endblock %}
