--- a/templates/widgets/messages.html
+++ b/templates/widgets/messages.html
@@ -1,5 +1,7 @@
 {% if messages %}
     {% for message in messages %}
-        <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">{{ message }}</div>
+        <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">
+            {{ message }}
+        </div>
     {% endfor %}
 {% endif %}
